# VISION_SUBSYSTEM

./: README.md
armor_msgs/srv/: ArmorDirectiveList.srv
pitt_msgs/: CMakeLists.txt  package.xml  try
pitt_msgs/msg/: All_shapes_attributes.msg  Attribute.msg  ClustersOutput.msg  InliersCluster.msg  Support.msg  TrackedShape.msg  TrackedShapes.msg
pitt_msgs/srv/: ArmFilter.srv  ClusterSegmentation.srv  ColorSrvMsg.srv  DeepFilter.srv  PrimitiveSegmentation.srv  SupportSegmentation.srv
pitt_object_table_segmentation/: CMakeLists.txt  README.md  package.xml
pitt_object_table_segmentation/doc/: pitt_object_table_segmentation.doxyfile
pitt_object_table_segmentation/launch/: table_segmentation.launch  table_segmentation_backup.launch
pitt_object_table_segmentation/logs/: logs-2019-01-24_15-49-25
pitt_object_table_segmentation/src/: 2019-02-28-20-56-11.bag  VisClient.cpp  VisNode.cpp  obj_segmentation.cpp  ransac_segmentation.cpp
pitt_object_table_segmentation/src/color_services/: color_srv.cpp
pitt_object_table_segmentation/src/point_cloud_library/: pc_manager.cpp  pc_manager.h  pc_primitive.cpp  pc_primitive.h  srv_manager.h
pitt_object_table_segmentation/src/segmentation_services/: arm_filter_srv.cpp  cluster_segmentation_srv.cpp  cone_segmentation_srv.cpp  cylinder_segmentation_srv.cpp  deep_filter_srv.cpp  plane_segmentation_srv.cpp  sphere_segmentation_srv.cpp  supports_segmentation_srv.cpp
