<?xml version="1.0"?>
<package>
  <name>pitt_object_table_segmentation</name>
  <version>1.0.0</version>
  <description>The pitt_object_table_segmentation package</description>

  <maintainer email="luca.buoncompagni@edu.unige.it">Buoncompagni Luca</maintainer>
  <author email="luca.buoncompagni@edu.unige.it">Buoncompagni Luca</author>
  <url type="website">https://github.com/EmaroLab</url>
  <license>GPLv2</license>


  <!--   <test_depend>gtest</test_depend> -->

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <!--  <build_depend>pcl_ros</build_depend> -->
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>pcl_msgs</build_depend>
  <build_depend>pitt_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <!--  <run_depend>pcl_ros</run_depend> -->
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>pcl_msgs</run_depend>
  <run_depend>pitt_msgs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
